--- a/config.yml
+++ b/config.yml
@@ -116,20 +116,20 @@ params:
   socialIcons:
     - name: github
       url: "https://github.com/litrane"
-    - name: twitter
-      url: "img/twitter.png"
-    - name: facebook
-      url: "https://www.facebook.com/profile.php?id=100027782410997"
-    - name: instagram
-      url: "img/instagram.png"
-    - name: QQ
-      url: "img/qq.png"
-    - name: WeChat
-      url: "img/wechat.png"
+    #- name: twitter
+    #  url: "img/twitter.png"
+    #- name: facebook
+    #  url: "https://www.facebook.com/profile.php?id=100027782410997"
+    #- name: instagram
+    #  url: "img/instagram.png"
+    #- name: QQ
+    #  url: "img/qq.png"
+    #- name: WeChat
+    #  url: "img/wechat.png"
     - name: bilibili
-      url: "https://space.bilibili.com/234461224"
+      url: "https://space.bilibili.com/121903060"
     - name: email
-      url: "mailto:1931559710@qq.com"
+      url: "mailto:dingqiuyu@stu.pku.edu.cn"
     - name: RSS
       url: "index.xml"
 
